cabal-version: 3.0
name: hellsmack
version: 0.1.0.0
build-type: Simple

homepage: https://github.com/amesgen/hellsmack
bug-reports: https://github.com/amesgen/hellsmack/issues
license: CC0-1.0
license-file: LICENSE
extra-source-files: README.md
author: amesgen
maintainer: amesgen@amesgen.de

source-repository head
  location: https://github.com/amesgen/hellsmack
  type: git

flag use-openssl
  description: Use OpenSSL instead of Haskell's tls package for TLS connections
  default: True
  manual: True

common commons
  default-extensions: AllowAmbiguousTypes ApplicativeDo BangPatterns BinaryLiterals BlockArguments ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving ImportQualifiedPost InstanceSigs KindSignatures LambdaCase LiberalTypeSynonyms MultiParamTypeClasses MultiWayIf NamedFieldPuns NoStarIsType OverloadedLabels OverloadedStrings PackageImports PatternSynonyms PolyKinds QuantifiedConstraints QuasiQuotes RankNTypes RecordWildCards RoleAnnotations ScopedTypeVariables StandaloneDeriving StandaloneKindSignatures StrictData TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators UnliftedNewtypes ViewPatterns
  ghc-options: -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wmissing-deriving-strategies -Wunused-packages -Wwarn=unused-packages -fhide-source-paths -fno-warn-name-shadowing
  default-language: Haskell2010

common base-no-prelude
  build-depends: base
  mixins: base hiding (Prelude)

library
  import: commons, base-no-prelude
  ghc-options: -Wmissing-export-lists

  build-tool-depends:
      autoexporter:autoexporter
  build-depends:
      relude
    , bytestring
    , text
    , containers
    , compactable
    , transformers
    , random
    , filepath
    , path
    , path-io
    , temporary
    , http-types
    , http-client
    , network-uri
    , aeson
    , aeson-qq
    , lens-aeson
    , time
    , string-interpolate
    , binary
    , exceptions
    , unliftio
    , conduit
    , conduit-extra
    , binary-conduit
    , broadcast-chan-conduit
    , lens
    , generic-lens
    , pcre2 >= 1.1
    , cryptohash-sha1
    , base16
    , zip
    , ansi-terminal
    , colourista
    , table-layout
    , with-utf8
    , semigroups
    , optparse-applicative
    , gitrev
  if flag(use-openssl) && !os(windows)
    build-depends: http-client-openssl >= 0.3.2
    cpp-options: -DUSE_OPENSSL
  else
    build-depends: http-client-tls

  exposed-modules:
      Prelude
      HellSmack.Logging
      HellSmack.Vanilla
      HellSmack.Forge
      HellSmack.Curse
      HellSmack.Curse.API
      HellSmack.Yggdrasil
      HellSmack.Yggdrasil.API
      HellSmack.Util
      HellSmack.Util.Download
      HellSmack.Util.Exception
      HellSmack.Util.Has
      HellSmack.Util.Meta
      HellSmack.Util.Minecraft
      HellSmack.Util.Murmur
      HellSmack.Util.Newtypes
      HellSmack.Util.Path
      HellSmack.Util.Terminal
      HellSmack.Http
      Main
  other-modules:
      Paths_hellsmack
  autogen-modules:
      Paths_hellsmack
  hs-source-dirs: src

  if os(linux)
    cpp-options: -DOS_LINUX
  if os(darwin)
    cpp-options: -DOS_OSX
  if os(windows)
    cpp-options: -DOS_WINDOWS
  if arch(i386)
    cpp-options: -DARCH_X86
  if arch(x86_64)
    cpp-options: -DARCH_X86_64

common exec
  ghc-options:
    -threaded -rtsopts
    -- -qn2: lower CPU usage
    "-with-rtsopts=-N -qn2"
  build-depends: hellsmack

executable hellsmack
  import: commons, exec
  hs-source-dirs: app
  main-is: Main.hs

test-suite tasty
  import: commons, base-no-prelude, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Driver.hs
  build-tool-depends:
      tasty-discover:tasty-discover
  build-depends:
      tasty
    , tasty-hunit

    , containers
    , path-io
    , unliftio
  other-modules:
      CurseTest
      VanillaTest
      YggdrasilTest
