cabal-version: 3.0
name: hellsmack
version: 0.1.2.1
build-type: Simple

homepage: https://github.com/amesgen/hellsmack
bug-reports: https://github.com/amesgen/hellsmack/issues
license: CC0-1.0
license-file: LICENSE
extra-source-files: README.md
author: amesgen
maintainer: amesgen@amesgen.de

source-repository head
  location: https://github.com/amesgen/hellsmack
  type: git

flag use-openssl
  description: Use OpenSSL instead of Haskell's tls package for TLS connections
  default: True
  manual: True

common commons
  default-extensions: AllowAmbiguousTypes ApplicativeDo BangPatterns BinaryLiterals BlockArguments ConstraintKinds DataKinds DefaultSignatures DeriveAnyClass DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DerivingVia DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving ImportQualifiedPost InstanceSigs KindSignatures LambdaCase LiberalTypeSynonyms MultiParamTypeClasses MultiWayIf NamedFieldPuns NoStarIsType OverloadedLabels OverloadedStrings PackageImports PatternSynonyms PolyKinds QuantifiedConstraints QuasiQuotes RankNTypes RecordWildCards RoleAnnotations ScopedTypeVariables StandaloneDeriving StandaloneKindSignatures StrictData TemplateHaskell TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators UnliftedNewtypes ViewPatterns
  ghc-options: -Wall -Werror -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wmissing-deriving-strategies -Wunused-packages -Wwarn=unused-packages -fhide-source-paths -fno-warn-name-shadowing
  default-language: Haskell2010
  build-tool-depends: autoexporter:autoexporter >= 1.1
  build-depends: qualified-imports-plugin >= 0.0
  ghc-options: -fplugin=QualifiedImportsPlugin -fplugin-opt=QualifiedImportsPlugin:no-defaults -fplugin-opt=QualifiedImportsPlugin:Data.Text:T -fplugin-opt=QualifiedImportsPlugin:Data.Map.Strict:M -fplugin-opt=QualifiedImportsPlugin:Data.Set:S -fplugin-opt=QualifiedImportsPlugin:Data.ByteString:B -fplugin-opt=QualifiedImportsPlugin:Data.List.NonEmpty:NE

common base-no-prelude
  build-depends: base >= 4.14
  mixins: base hiding (Prelude)

library
  import: commons, base-no-prelude
  ghc-options: -Wmissing-export-lists

  build-depends:
      relude >= 1.0
    , split >= 0.2
    , these >= 1.1
    , semialign >= 1.2
    , transformers >= 0.5
    , random >= 1.2
    , filepath >= 1.4
    , path >= 0.8
    , path-io >= 1.6
    , temporary >= 1.3
    , http-types >= 0.12
    , http-client >= 0.7
    , network-uri >= 2.6
    , aeson >= 1.5
    , deriving-aeson >= 0.2.7
    , lens-aeson >= 1.1
    , time >= 1.9
    , yasi >= 0.1.1
    , binary >= 0.8
    , exceptions >= 0.10
    , unliftio >= 0.2
    , conduit >= 1.3
    , conduit-extra >= 1.3
    , binary-conduit >= 1.3
    , broadcast-chan-conduit >= 0.2
    , lens >= 5.0
    , generic-lens >= 2.0
    , pcre2 >= 1.1
    , cryptohash-sha1 >= 0.11
    , base16 >= 0.3
    , zip >= 1.6
    , ansi-terminal >= 0.10
    , colourista >= 0.1
    , table-layout >= 0.9
    , with-utf8 >= 1.0
    , semigroups >= 0.19
    , optparse-applicative >= 0.16
    , gitrev >= 1.3
  if flag(use-openssl)
    build-depends: http-client-openssl >= 0.3.3
    cpp-options: -DUSE_OPENSSL
  else
    build-depends: http-client-tls >= 0.3

  exposed-modules:
      Prelude
      HellSmack.Logging
      HellSmack.Vanilla
      HellSmack.ModLoader
      HellSmack.ModLoader.Forge
      HellSmack.ModLoader.Fabric
      HellSmack.Curse
      HellSmack.Curse.API
      HellSmack.Yggdrasil
      HellSmack.Yggdrasil.API
      HellSmack.Util
      HellSmack.Util.Aeson
      HellSmack.Util.Download
      HellSmack.Util.Exception
      HellSmack.Util.Has
      HellSmack.Util.IO
      HellSmack.Util.Meta
      HellSmack.Util.Minecraft
      HellSmack.Util.Murmur
      HellSmack.Util.Newtypes
      HellSmack.Util.Path
      HellSmack.Util.Terminal
      HellSmack.Http
      Main
  other-modules: Paths_hellsmack
  autogen-modules: Paths_hellsmack
  hs-source-dirs: src

  if os(linux)
    cpp-options: -DOS_LINUX
  if os(darwin)
    cpp-options: -DOS_OSX
  if os(windows)
    cpp-options: -DOS_WINDOWS
  if arch(i386)
    cpp-options: -DARCH_X86
  if arch(x86_64)
    cpp-options: -DARCH_X86_64

common exec
  ghc-options:
    -threaded -rtsopts
    -- -qn2: lower CPU usage
    "-with-rtsopts=-N -qn2"
  build-depends: hellsmack

executable hellsmack
  import: commons, exec
  hs-source-dirs: app
  main-is: Main.hs

test-suite tasty
  import: commons, base-no-prelude, exec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Driver.hs
  build-tool-depends:
      tasty-discover:tasty-discover >= 4.2
  build-depends:
      tasty >= 1.4
    , tasty-hunit >= 0.10

    , relude
    , path-io
    , unliftio
  other-modules:
      HellSmack.Test.CurseTest
      HellSmack.Test.VanillaTest
      HellSmack.Test.YggdrasilTest
